--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:latest
 
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
-COPY html /usr/share/nginx/html
+COPY page /usr/share/nginx/html
 
 EXPOSE 80
 
