--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,5 +14,6 @@ COPY main.py .
 
 ENV MYSQL_DATABASE = parkingissue
 ENV LOGIN_PASSWORD = ${LOGIN_PASSWORD}
+ENV USER_PASSWORD = ${USER_PASSWORD}
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "4090"]
