--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,11 @@
 FROM nginx:latest
 
+RUN apt-get update && \
+    apt-get install -y iputils-ping
+
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
-COPY page /usr/share/nginx/html
+COPY page/test.html /usr/share/nginx/html
+COPY page/clear.html /usr/share/nginx/html
 
 EXPOSE 80
 
