--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index login.html;
+    index test.html;
 
     location / {
         try_files $uri $uri/ =404;
