--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ docker/.db_env
 docker/.airflow_env
 docker/.front_env
 docker/.back_env
-
+docker/database/init/*.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
