parking_info 테스트 중

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -60,9 +60,9 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     AIRFLOW__LOGGING__HIDE_SENSITIVE_VAR_CONN_FIELDS: 'false'
     AIRFLOW__LOGGING__LOGGING_LEVEL: 'DEBUG'
+    _PIP_ADDITIONAL_REQUIREMENTS: "tqdm==4.67.1"
   
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}dags:/opt/airflow/dags
@@ -119,6 +119,12 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+        reservations:
+          memory: 1G
     
 
   airflow-scheduler:
@@ -136,6 +142,12 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    deploy:
+      resources:
+        limits:
+          memory: 4G
+        reservations:
+          memory: 2G
 
   airflow-worker:
     env_file:
@@ -159,6 +171,12 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    deploy:
+      resources:
+        limits:
+          memory: 8G
+        reservations:
+          memory: 4G
     # deploy:
     #   replicas: 3  # 워커 수 3개로 설정
 
