--- a/docker/db-compose.yml
+++ b/docker/db-compose.yml
@@ -4,8 +4,9 @@ services:
     build:
       context: ./database
       dockerfile: Dockerfile  # Dockerfile 이름
-    image: parkingissue-db:latest  # 빌드될 이미지 이름
+    image: parkingissue/parkingissue-db:1.0.18  # 빌드될 이미지 이름
     container_name: parkingissue_database
+    platform: linux/amd64
     env_file:
       - .db_env
     ports:
