--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,9 +5,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py .
-COPY kafka_producer.py .
-COPY model.py .
+COPY . /app/
 
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
