--- a/docker/database/config/default.conf
+++ b/docker/database/config/default.conf
@@ -16,6 +16,7 @@ default-character-set=utf8mb4_unicode_ci
 default-character-set=utf8mb4_unicode_ci
 
 [mysqld]
+default-time-zone = 'Asia/Seoul'
 character-set-server=utf8mb4
 collation-server=utf8mb4_unicode_ci
 skip-character-set-client-handshake
