--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ docker/database/init/*.csv
 docker/database/init/*.sql
 
 backend/.env
+frontend/.env
+.DS_Store
+__MACOSX/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
