--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ backend/.env
 frontend/.env
 .DS_Store
 __MACOSX
+.DS_Store:Zone.Identifier
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
