--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ docker/database/init/*.csv
 docker/database/init/*.sql
 
 backend/.env
+frontend/.env
+
+.DS_Store
+__MACOSX
+.DS_Store:Zone.Identifier
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
