기업회원 행사업로드 주말동안 한 것

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ docker/.back_env
 docker/database/init/*.csv
 docker/database/init/*.sql
 
+backend/event/uploads/
 backend/.env
 
 # Byte-compiled / optimized / DLL files
