--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ frontend/.env
 .DS_Store
 __MACOSX
 .DS_Store:Zone.Identifier
+Zone.Identifier
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
