--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,18 +11,31 @@ ENV PYTHONPATH=/app
 
 ARG JWT_LOGIN_ACCESS_KEY
 ARG DB_HOST
-ARG DB_LOGIN_USER
-ARG DB_LOGIN_PASSWORD
-ARG DB_REGISTER_USER
-ARG DB_REGISTER_PASSWORD
-ARG DB_LOCATION_USER
-ARG DB_LOCATION_PASSWORD
-ARG DB_SPARK_USER
-ARG DB_SPARK_PASSWORD
-ARG DB_AIRFLOW_USER
-ARG DB_AIRFLOW_PASSWORD
-ARG DB_UPLOADER_USER
-ARG DB_UPLOADER_PASSWORD
 ARG DB_NAME
+ARG DB_PORT
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+ARG DB_USER_I
+ARG DB_USER_II
+ARG DB_USER_III
+ARG DB_USER_IV
+ARG DB_USER_V
+ARG DB_USER_VI
+ARG DB_USER_VII
+ARG DB_USER_VIII
+ARG DB_USER_IX
+ARG DB_USER_X
+
+ARG DB_USER_IPW
+ARG DB_USER_IIPW
+ARG DB_USER_IIIPW
+ARG DB_USER_IVPW
+ARG DB_USER_VPW
+ARG DB_USER_VIPW
+ARG DB_USER_VIIPW
+ARG DB_USER_VIIIPW
+ARG DB_USER_IXPW
+ARG DB_USER_XPW
+
+
+
+CMD ["python", "-m", "main"]
