--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,5 @@ FROM httpd:2.4
 COPY ./my-httpd.conf /usr/local/apache2/conf/httpd.conf
 COPY ./page /usr/local/apache2/blog/
 
-RUN ["apt-get", "update"]
-RUN ["apt-get", "install", "-y", "vim"]
-
+RUN apt-get update && apt-get install -y vim awscli
 # /usr/local/apache2/blog
