--- a/backup/dockerfilebackup
+++ b/backup/dockerfilebackup
@@ -3,10 +3,11 @@ FROM python:3.9
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --upgrade pip setuptools
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app/
+
+ENV PYTHONPATH=/app
 
 ARG JWT_LOGIN_ACCESS_KEY
 ARG DB_HOST
@@ -37,4 +38,4 @@ ARG DB_USER_XPW
 
 ARG DB_STR_KEY
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["python", "-m", "main"]
