--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,33 +8,32 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app/
 
-ARG JWT_LOGIN_ACCESS_KEY
-ARG DB_HOST
-ARG DB_NAME
-ARG DB_PORT
-
-ARG DB_USER_I
-ARG DB_USER_II
-ARG DB_USER_III
-ARG DB_USER_IV
-ARG DB_USER_V
-ARG DB_USER_VI
-ARG DB_USER_VII
-ARG DB_USER_VIII
-ARG DB_USER_IX
-ARG DB_USER_X
-
-ARG DB_USER_IPW
-ARG DB_USER_IIPW
-ARG DB_USER_IIIPW
-ARG DB_USER_IVPW
-ARG DB_USER_VPW
-ARG DB_USER_VIPW
-ARG DB_USER_VIIPW
-ARG DB_USER_VIIIPW
-ARG DB_USER_IXPW
-ARG DB_USER_XPW
-
-ARG DB_STR_KEY
+# 환경 변수 설정
+ENV JWT_LOGIN_ACCESS_KEY=$JWT_LOGIN_ACCESS_KEY \
+    DB_HOST=$DB_HOST \
+    DB_NAME=$DB_NAME \
+    DB_PORT=$DB_PORT \
+    DB_USER_I=$DB_USER_I \
+    DB_USER_II=$DB_USER_II \
+    DB_USER_III=$DB_USER_III \
+    DB_USER_IV=$DB_USER_IV \
+    DB_USER_V=$DB_USER_V \
+    DB_USER_VI=$DB_USER_VI \
+    DB_USER_VII=$DB_USER_VII \
+    DB_USER_VIII=$DB_USER_VIII \
+    DB_USER_IX=$DB_USER_IX \
+    DB_USER_X=$DB_USER_X \
+    DB_USER_IPW=$DB_USER_IPW \
+    DB_USER_IIPW=$DB_USER_IIPW \
+    DB_USER_IIIPW=$DB_USER_IIIPW \
+    DB_USER_IVPW=$DB_USER_IVPW \
+    DB_USER_VPW=$DB_USER_VPW \
+    DB_USER_VIPW=$DB_USER_VIPW \
+    DB_USER_VIIPW=$DB_USER_VIIPW \
+    DB_USER_VIIIPW=$DB_USER_VIIIPW \
+    DB_USER_IXPW=$DB_USER_IXPW \
+    DB_USER_XPW=$DB_USER_XPW \
+    DB_STR_KEY=$DB_STR_KEY \
+    KAKAO_REST=$KAKAO_REST
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
